Adding voters from exception requests.

--- a/events/elections/2021/voters.yaml
+++ b/events/elections/2021/voters.yaml
@@ -16,6 +16,7 @@
 # 2021-10-10: Adding from exception requests.
 # 2021-10-16: Adding from exception requests.
 # 2021-10-19: Adding from exception requests.
+# 2021-10-21: Adding from exception requests.
 #
 
 eligible_voters:
@@ -136,6 +137,7 @@ eligible_voters:
 - christopherhein
 - chymy
 - cici37
+- CIPHERTron
 - cjcullen
 - cjwagner
 - CKchen0726
