Adding voters from exception requests. Adding voters from CoCC.

--- a/events/elections/2021/voters.yaml
+++ b/events/elections/2021/voters.yaml
@@ -19,6 +19,7 @@
 # 2021-10-21: Adding from exception requests.
 # 2021-10-26: Adding from exception requests. Removing one voter due to account swap.
 # 2021-10-29: Adding from exception requests.
+# 2021-10-31: Adding from exception requests. Adding from CoCC.
 #
 
 eligible_voters:
@@ -76,6 +77,7 @@ eligible_voters:
 - ash2k
 - ashish-amarnath
 - astoycos
+- Atharva-Shinde
 - atoato88
 - Aut0R3V
 - aveshagarwal
@@ -116,6 +118,7 @@ eligible_voters:
 - castrojo
 - cblecker
 - CecileRobertMichon
+- celanthe
 - celestehorgan
 - champtar
 - changshuchao
@@ -415,6 +418,7 @@ eligible_voters:
 - mattcary
 - mattfenwick
 - matthyx
+- mauilion
 - mauriciopoppe
 - MaxRink
 - mayankshah1607
@@ -657,6 +661,7 @@ eligible_voters:
 - vincepri
 - vivekbagade
 - vladimirvivien
+- vllry
 - vteratipally
 - wangyx1992
 - wangyysde
