Update affiliations for Alison Dowdney

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -1170,7 +1170,7 @@ sigs:
     chairs:
     - github: alisondy
       name: Alison Dowdney
-      company: Weaveworks
+      company: Independent
     - github: mrbobbytables
       name: Bob Killen
       company: Google
