slack-config/usergroups.yaml: Update `steering-members`
Add:
- Stephen
- Tim

Emeritus:
- Nikhita
- Derek

Signed-off-by: Stephen Augustus <foo@auggie.dev>

--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -185,12 +185,12 @@ usergroups:
       - steering-committee
     members:
       - cblecker
-      - derekwaynecarr
       - dims
+      - justaugustus
       - liggitt
       - mrbobbytables
-      - nikhita
       - paris
+      - tpepper
 
   - name: grafana-operator-maintainers
     long_name: Grafana Operator Maintainers
