Request channel krafternetes.
Signed-off-by: Josh Berkus <josh@agliodbs.com>

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -186,6 +186,7 @@ channels:
   - name: kpt
   - name: kr-dev
   - name: kr-users
+  - name: krafternetes
   - name: kraken
   - name: krane
   - name: krator
