slack-config(enhancements): Update subproject owners
Signed-off-by: Stephen Augustus <foo@auggie.dev>

--- a/communication/slack-config/sig-architecture/usergroups.yaml
+++ b/communication/slack-config/sig-architecture/usergroups.yaml
@@ -11,5 +11,5 @@ usergroups:
     members:
       - jeremyrickard # subproject owner
       - johnbelamaric # subproject owner
-      - justaugustus # subproject owner
+      - kikisdeliveryservice # subproject owner
       - mrbobbytables # subproject owner
