Add channel for controller-runtime
Signed-off-by: Madhav Jivrajani <madhav.jiv@gmail.com>

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -67,6 +67,7 @@ channels:
   - name: compliance-hipaa
   - name: contour
   - name: contributor-summit
+  - name: controller-runtime
   - name: craft
   - name: crash-diagnostics
   - name: crd-installation
