--- a/sigs.yaml
+++ b/sigs.yaml
@@ -2030,8 +2030,8 @@ sigs:
   label: scalability
   leadership:
     chairs:
-    - github: mm4tt
-      name: Matt Matejczyk
+    - github: marseel
+      name: Marcel Zieba
       company: Google
     - github: shyamjvs
       name: Shyam Jeedigunta
@@ -2040,6 +2040,9 @@ sigs:
     - github: wojtek-t
       name: Wojciech Tyczynski
       company: Google
+    emeritus_leads:
+    - github: mm4tt
+      name: Matt Matejczyk
   meetings:
   - description: Regular SIG Meeting
     day: Thursday
