Fix the slack ID for jiangd and yinw
Signed-off-by: Daniel Jiang <jiangd@vmware.com>

--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -58,7 +58,7 @@ users:
   jdumars: U0YJS6LHL
   jeefy: U5MCFK468
   jeremyrickard: U72ESU398
-  jiangd: WAATBLVD3
+  jiangd: UFS2C9JEA
   jimangel: U4HSVFA5U
   jmccormick2001: UMPLV0G0H
   jmrodri: U4KATPQ48
@@ -135,5 +135,5 @@ users:
   wilsonehusin: U0100068GF2
   wurbanski: URX7CMK97
   xmudrii: U4Q2TNGVD
-  yinw: WAAPAQ1R8
+  yinw: UMVD1GDCY
   zubron: U7G0KNS86
