Update pinniped user group membership
Signed-off-by: Monis Khan <mok@vmware.com>

--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -171,12 +171,11 @@ usergroups:
       - pinniped
     members:
       - enj
-      - mattmoyer
-      - ankeesler
       - cfryanr
       - margocrawf
       - microwavables
-      - pabloschuhmacher
+      - anjaltelang
+      - shamus
 
   - name: steering-members
     long_name: Kubernetes Steering Committee
