--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -8,6 +8,7 @@ users:
   alisondy: U9CBCBLCV
   ameukam: U68KPQ448
   anandrkskd: U01DRS3V0R2
+  anjaltelang: U028B09KZ5X
   ankeesler: UBAA1KQ4A
   annajung: U8SLB1P2Q
   aravindputrevu: U1G27SDU6
@@ -115,6 +116,7 @@ users:
   saschagrunert: U53SUDBD4
   savitharaghunathan: UC8U2V3BM
   sethmccombs: U92LLUZ8A
+  shamus: US7EUUBK8
   simplytunde: UAY1NBYHE
   Sladyn Nunes: UQ9J177Q8
   Sujay Pillai: UBW3N1VGW
