--- a/.github/ISSUE_TEMPLATE/survey-request.yml
+++ b/.github/ISSUE_TEMPLATE/survey-request.yml
@@ -18,9 +18,7 @@ body:
   attributes:
     label: Goal of Survey
     description: what is the main thing you want this survey to determine?
-    placeholder: Examples-
-"To research how end users are using this feature", "To decide when to host our
-SIG summit" 
+    placeholder: Examples- "To research how end users are using this feature", "To decide when to host our SIG summit" 
   validations:
     required: true
 - type: input
@@ -32,9 +30,7 @@ SIG summit"
 - type: input
   attributes:
     label: Results Recipients
-    description: list of individuals who are going to be able to see the raw data of the
-responses.  This needs to be a short list of individuals, not a team alias,
-for GDPR reasons.
+    description: list of individuals who are going to be able to see the raw data of the responses. This needs to be a short list of individuals, not a team alias, for GDPR reasons.
   validations:
     required: true
 - type: input
@@ -50,23 +46,20 @@ for GDPR reasons.
 - type: input
   attributes:
     label: Publicity Help Wanted?
-    description: Do you need help from Contributor Communications in publicizing this
-survey?
+    description: Do you need help from Contributor Communications in publicizing this survey?
     placeholder: Y / N
   validations:
     required: true
 - type: input
   attributes:
     label: Data Analysis Wanted?
-    description: Do you want help creating charts or cross-checking data? Help is sometimes
-available.
+    description: Do you want help creating charts or cross-checking data? Help is sometimes available.
     placeholder: Y / N
   validations:
     required: true
 - type: input
   attributes:
     label: Link to Draft Questions
-    description: ideally, HackMD page, Google Doc, or some other format that supports comments
-so that we can help you improve your survey.
+    description: ideally, HackMD page, Google Doc, or some other format that supports comments so that we can help you improve your survey.
   validations:
     required: true
