--- a/.github/ISSUE_TEMPLATE/marketing-request.yml
+++ b/.github/ISSUE_TEMPLATE/marketing-request.yml
@@ -4,8 +4,8 @@ title: 'REQUEST: New communication about <topic>'
 labels: area/contributor-comms, sig/contributor-experience
 body:
 - type: input
-  label: What do you want send out?(Please include a link to a draft)
-  description: Gists, Hackmd.io, or Google Doc preferred. Include any artwork, pics, diagrams, or any other assets with public links. 
-              We use a combination of mailing lists, Slack messages, and Twitter to get the word out.
-validations:
-  required: true
+  attributes:
+    label: What do you want send out?(Please include a link to a draft)
+    description: Gists, Hackmd.io, or Google Doc preferred. Include any artwork, pics, diagrams, or any other assets with public links. We use a combination of mailing lists, Slack messages, and Twitter to get the word out.
+  validations:
+    required: true
