steering: Add Committee liaisons
Proposing Steering Committee liaisons for the following groups:
- Code of Conduct Committee (Tim)
- Security Response Committee (Stephen)

Choosing Tim and Stephen here, because:
- they're newly-appointed SC members with a lighter liaison load
- they have served on (or [have] operate[d] in) the respective
  committee's private spaces and are familiar with their processes

Signed-off-by: Stephen Augustus <foo@auggie.dev>

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -3130,6 +3130,9 @@ committees:
     teams:
     - name: code-of-conduct-committee
       description: General Discussion
+    liaison:
+      github: tpepper
+      name: Tim Pepper
 - dir: committee-security-response
   name: Security Response
   mission_statement: >
@@ -3166,6 +3169,9 @@ committees:
     teams:
     - name: security-response-committee
       description: General Discussion
+    liaison:
+      github: justaugustus
+      name: Stephen Augustus
   subprojects:
   - name: committee-security-response
     description: Policies and documentation for the Security Response Committee
