--- a/sigs.yaml
+++ b/sigs.yaml
@@ -1854,18 +1854,11 @@ sigs:
     url: https://zoom.us/j/4799874685
     archive_url: https://docs.google.com/document/d/1Ne57gvidMEWXR70OxxnRkYquAoMpt56o75oZtg-OeBg/edit?usp=sharing
     recordings_url: https://www.youtube.com/playlist?list=PL69nYSiGNLP1wJPj5DYWXjiArF-MJ5fNG
-  - description: Monthly Alternate Time CI/Triage Meeting
-    day: second Thursday
-    time: "08:00"
-    tz: PT (Pacific Time)
-    frequency: monthly
-    url: https://zoom.us/j/4799874685
-    archive_url: https://docs.google.com/document/d/1fb-ugvgdSVIkkuJ388_nhp2pBTy_4HEVg5848Xy7n5U/edit
   - description: Weekly CI/Triage Meeting
     day: Wednesday
     time: "10:00"
     tz: PT (Pacific Time)
-    frequency: weekly - excluding 2nd week of the month
+    frequency: weekly
     url: https://zoom.us/j/4799874685
     archive_url: https://docs.google.com/document/d/1fb-ugvgdSVIkkuJ388_nhp2pBTy_4HEVg5848Xy7n5U/edit
   contact:
