sig-k8s-infra: ownership of oci-proxy
Related:
  - https://github.com/kubernetes/org/issues/3143

Signed-off-by: Arnaud Meukam <ameukam@gmail.com>

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -1633,6 +1633,9 @@ sigs:
       including various *.k8s.io sites
     owners:
     - https://raw.githubusercontent.com/kubernetes/k8s.io/main/OWNERS
+  - name: oci-proxy
+    owners:
+    - https://raw.githubusercontent.com/kubernetes-sigs/oci-proxy/main/OWNERS
 - dir: sig-multicluster
   name: Multicluster
   mission_statement: >
