Added Nick Turner as new sig cloud provider co-chair.

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -764,6 +764,9 @@ sigs:
     - github: cheftako
       name: Walter Fender
       company: Google
+    - github: nckturner
+      name: Nick Turner
+      company: Amazon
     emeritus_leads:
     - github: hogepodge
       name: Chris Hoge
