--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -76,6 +76,7 @@ channels:
   - name: csi-secrets-store #this channel is for secrets-store-csi-driver which is a subproject of sig-auth
   - name: de-events
   - name: de-users
+  - name: devfile
   - name: devspace
   - name: devstats
   - name: dexidp
