--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -15,6 +15,7 @@ users:
   asmacdo: UNVH7RY9J
   bai: U4XAULHL3
   Bart Farrell: U01DZM7PJDT
+  bhumijgupta: U022JUBM3B4 
   briandealwis: UAZKM38JV
   bubblemelon: U7K9C643G
   calebamiles: U1ZDD4CUR
@@ -24,9 +25,11 @@ users:
   cdrage: U2TU9NPH9
   cfryanr: U0188B6J42H
   chrisshort: U2YGXSD9B
+  CIPHERTron: U024FK4NLAH
   cjcullen: U0ALJAVMF
   cji: U5YSRC21J
   cpanato: U8DFY4TTK
+  danpopnyc: U9L55RA4V
   Dave Smith-Uchida: UDZDED8G2
   david-martin: ULMJ41U73
   derekwaynecarr: U0A69N5GQ
@@ -103,6 +106,7 @@ users:
   pb82: U019M8295AQ
   pensu91: U44FHF81G
   phenixblue: UB4UVLEAK
+  pnbrown: U011JJTQVGF
   prietyc123: U01D4MBLM52
   puerco: ULGHLJ7TP
   r-lawton: U019CNHR2E6
@@ -113,6 +117,7 @@ users:
   rnapoles-rh: U01KDAMSWJD
   robshelly: U01LL4P09SR
   sammy: U8NJFL023
+  sandipanpanda: U02A47HJ517
   saschagrunert: U53SUDBD4
   savitharaghunathan: UC8U2V3BM
   sethmccombs: U92LLUZ8A
