--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -91,7 +91,7 @@ usergroups:
       - paris
       - markyjackson-taulia
       - pnbrown
-      - CIPHERtron
+      - CIPHERTron
       - bhumijgupta
       - sandipanpanda
 
