--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -83,11 +83,17 @@ usergroups:
       - sig-contribex
     members:
       - alisondy
-      - castrojo
       - jeefy
       - mrbobbytables
       - onlydole
+      - chrisshort
+      - danpopnyc
       - paris
+      - markyjackson-taulia
+      - pnbrown
+      - CIPHERTron
+      - bhumijgupta
+      - sandipanpanda
 
   - name: zoom-admins
     long_name: Zoom Admins
