Add slack channel for Karpenter
See relevant discussion: https://kubernetes.slack.com/archives/C4M06S5HS/p1641263233066400?thread_ts=1641229254.066200&cid=C4M06S5HS

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -157,6 +157,7 @@ channels:
   - name: carvel
     id: CH8KCCKA5
   - name: kalm
+  - name: karpenter
   - name: kaniko
   - name: k8s-dual-stack
     archived: true
