Add #release-leads Slack channel

--- a/communication/slack-config/sig-release/usergroups.yaml
+++ b/communication/slack-config/sig-release/usergroups.yaml
@@ -49,6 +49,7 @@ usergroups:
       - release-enhancements
       - release-management
       - release-notes
+      - release-leads
       - sig-release
     members:
       - cpanato # SIG Release Technical Lead
