--- a/communication/slack-config/sig-release/config.yaml
+++ b/communication/slack-config/sig-release/config.yaml
@@ -8,4 +8,4 @@ channels:
   - name: release-management
     id: CJH2GBF7Y
   - name: release-notes
-  - name: release-leads
+  - name: release-team-leads
