Update affiliation for Wei Huang

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -2128,14 +2128,14 @@ sigs:
     chairs:
     - github: Huang-Wei
       name: Wei Huang
-      company: IBM
+      company: Apple
     - github: ahg-g
       name: Abdullah Gharaibeh
       company: Google
     tech_leads:
     - github: Huang-Wei
       name: Wei Huang
-      company: IBM
+      company: Apple
     - github: ahg-g
       name: Abdullah Gharaibeh
       company: Google
