Add cel-expression-dev channel
Contributor count for https://github.com/kubernetes/enhancements/tree/master/keps/sig-api-machinery/2876-crd-validation-expression-language is expanding and a dedicated slack channel would really help us keep everyone informed and involved.

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -352,6 +352,7 @@ channels:
   - name: shipwright
   - name: shoutouts
   - name: sig-api-machinery
+  - name: sig-api-machinery-cel-dev
   - name: sig-apps
   - name: sig-auth
   - name: sig-autoscaling
