--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -358,6 +358,7 @@ channels:
   - name: sig-autoscaling
   - name: sig-autoscaling-api
   - name: sig-cli
+  - name: sig-cli-krm-functions
   - name: sig-clstr-life-leads
   - name: sig-cluster-lifecycle
   - name: sig-cluster-ops
