--- a/sigs.yaml
+++ b/sigs.yaml
@@ -731,6 +731,8 @@ sigs:
     owners:
     - https://raw.githubusercontent.com/kubernetes-sigs/krew-index/master/OWNERS
   - name: krm-functions
+    contact:
+      slack: sig-cli-krm-functions
     owners:
     - https://raw.githubusercontent.com/kubernetes-sigs/krm-functions-registry/main/OWNERS
   - name: kubectl
