Update release-team-leads Slack usergroup for 1.24

--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -25,6 +25,7 @@ users:
   cdrage: U2TU9NPH9
   cfryanr: U0188B6J42H
   chrisshort: U2YGXSD9B
+  cici37: UTY5J12L9
   CIPHERTron: U024FK4NLAH
   cjcullen: U0ALJAVMF
   cji: U5YSRC21J
@@ -62,6 +63,7 @@ users:
   jdumars: U0YJS6LHL
   jeefy: U5MCFK468
   jeremyrickard: U72ESU398
+  Jesse Butler: U0122V3T932
   jiangd: UFS2C9JEA
   jimangel: U4HSVFA5U
   jmccormick2001: UMPLV0G0H
@@ -141,6 +143,7 @@ users:
   vladimirmukhin: UHVSCSD4G
   wilsonehusin: U0100068GF2
   wurbanski: URX7CMK97
+  Xander: UDHV1RXB2
   xmudrii: U4Q2TNGVD
   yinw: UMVD1GDCY
   zubron: U7G0KNS86
