Update Adolfo García company affiliation
Signed-off-by: Adolfo García Veytia (Puerco) <adolfo.garcia@uservers.net>

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -1943,7 +1943,7 @@ sigs:
       company: Apple
     - github: puerco
       name: Adolfo García Veytia
-      company: uServers
+      company: Chainguard, Inc
     emeritus_leads:
     - github: alejandrox1
       name: Jorge Alarcon Ochoa
