Add surveys channel.
Signed-off-by: Josh Berkus <josh@agliodbs.com>

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -398,6 +398,7 @@ channels:
   - name: sre
   - name: steering-committee
   - name: submariner
+  - name: surveys
   - name: summit-staff
   - name: suse-caasp
   - name: talk-proposals
