Add kpack slack channel
Signed-off-by: Tom Kennedy <ktom@vmware.com>

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -186,6 +186,7 @@ channels:
   - name: kops-users
   - name: kots
     id: CFFKXV0JZ
+  - name: kpack
   - name: kpt
   - name: kr-dev
   - name: kr-users
