Add slack channel for discussing swap implementation

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -379,6 +379,7 @@ channels:
   - name: sig-node-bug-scrub
   - name: sig-node-rkt
     archived: true
+  - name: sig-node-swap
   - name: sig-scalability
   - name: sig-scheduling
   # sig-security* channels are defined in sig-security/
