change my company affilitation
Signed-off-by: Andrew Sy Kim <andrewsy@google.com>

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -762,7 +762,7 @@ sigs:
     chairs:
     - github: andrewsykim
       name: Andrew Sy Kim
-      company: VMware
+      company: Google
     - github: cheftako
       name: Walter Fender
       company: Google
