--- a/sigs.yaml
+++ b/sigs.yaml
@@ -219,7 +219,8 @@ sigs:
     - https://raw.githubusercontent.com/kubernetes/kompose/master/OWNERS
   - name: workloads-api
     description: The core workloads API, which is composed of the CronJob, DaemonSet,
-      Deployment, Job, ReplicaSet, ReplicationController, and StatefulSet kinds
+      Deployment, Job, ReplicaSet, ReplicationController, PodDisruptionBudget and
+      StatefulSet kinds
     owners:
     - https://raw.githubusercontent.com/kubernetes/kubernetes/master/pkg/apis/apps/OWNERS
     - https://raw.githubusercontent.com/kubernetes/kubernetes/master/pkg/apis/batch/OWNERS
