add sig-auth-kms-dev slack channel
Signed-off-by: Anish Ramasekar <anish.ramasekar@gmail.com>

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -357,6 +357,7 @@ channels:
   - name: sig-api-machinery-cel-dev
   - name: sig-apps
   - name: sig-auth
+  - name: sig-auth-kms-dev
   - name: sig-autoscaling
   - name: sig-autoscaling-api
   - name: sig-cli
