--- a/sigs.yaml
+++ b/sigs.yaml
@@ -3195,7 +3195,7 @@ committees:
     chairs:
     - github: celestehorgan
       name: Celeste Horgan
-      company: CNCF
+      company: Independent
     - github: cpanato
       name: Carlos Tadeu Panato Jr.
       company: Mattermost
