Update contact information for cluster-api-provider-packet
- Adds slack channel for cluster-api-provider-packet

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -1085,6 +1085,8 @@ sigs:
     owners:
     - https://raw.githubusercontent.com/kubernetes-sigs/cluster-api-provider-openstack/master/OWNERS
   - name: cluster-api-provider-packet
+    contact:
+      slack: cluster-api-packet
     owners:
     - https://raw.githubusercontent.com/kubernetes-sigs/cluster-api-provider-packet/master/OWNERS
   - name: cluster-api-provider-vsphere
