Onboard/offboard Mo/Swamy to SRC

--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -57,10 +57,10 @@ usergroups:
       - sig-release
     members:
       - cjcullen
+      - enj
       - joelsmith
       - lukehinds
       - micahhausler
-      - swamymsft
       - tabbysable
       - tallclair
 
