Rebased & Changed employment details for Divya

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -1364,7 +1364,7 @@ sigs:
     chairs:
     - github: divya-mohan0209
       name: Divya Mohan
-      company: HSBC
+      company: SUSE
     - github: jimangel
       name: Jim Angel
       company: Google
