--- a/sigs.yaml
+++ b/sigs.yaml
@@ -1371,7 +1371,7 @@ sigs:
     chairs:
     - github: divya-mohan0209
       name: Divya Mohan
-      company: HSBC
+      company: SUSE
     - github: jimangel
       name: Jim Angel
       company: Google
