Clean up & add new members to contributor-comms slack usergroup

--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -26,21 +26,16 @@ usergroups:
     channels:
       - sig-contribex
     members:
+      - Atharva-Shinde
+      - AvineshTripathi
       - chrisshort
-      - mbbroberg
-      - onlydole
-      - paris
-      - "Rin Oliver"
-      - simplytunde
-      - Tunde
-      - kaslin
-      - rajula96reddy
-      - "Sladyn Nunes"
-      - "Kunal Kushwaha"
-      - "Bart Farrell"
-      - pensu91
-      - "Joel Barker"
+      - Debanitrkl
       - Jason
+      - kaslin
+      - mbbroberg
+      - paris
+      - PurneswarPrasad
+      - rajula96reddy
 
   # Should match the membership of the following teams at all times:
   # - https://git.k8s.io/security/#product-security-committee-psc
