--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -11,8 +11,10 @@ users:
   anjaltelang: U028B09KZ5X
   ankeesler: UBAA1KQ4A
   annajung: U8SLB1P2Q
+  AvineshTripathi: U029U44P26B
   aravindputrevu: U1G27SDU6
   asmacdo: UNVH7RY9J
+  Atharva-Shinde: U028J67T478
   bai: U4XAULHL3
   Bart Farrell: U01DZM7PJDT
   bhumijgupta: U022JUBM3B4 
@@ -33,6 +35,7 @@ users:
   danpopnyc: U9L55RA4V
   Dave Smith-Uchida: UDZDED8G2
   david-martin: ULMJ41U73
+  Debanitrkl: U02149V23EU
   derekwaynecarr: U0A69N5GQ
   dharmit: U0APPPEKE
   dims: U0Y7A2MME
@@ -111,6 +114,7 @@ users:
   pnbrown: U011JJTQVGF
   prietyc123: U01D4MBLM52
   puerco: ULGHLJ7TP
+  PurneswarPrasad: U027CFKVAB0 
   r-lawton: U019CNHR2E6
   rajula96reddy: U7K9EK1HC
   rashmigottipati: U013T1DD3PW
