Add slack channel for WG Batch
Based on https://github.com/kubernetes/community/tree/master/wg-batch

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -437,6 +437,7 @@ channels:
   - name: wg-api-expression
   - name: wg-apply
     archived: true
+  - name: wg-batch
   - name: wg-component-standard
     archived: true
   - name: wg-component-standard-mentorship
