Add pnbrown to pinniped-dev
Signed-off-by: Monis Khan <mok@vmware.com>

--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -182,6 +182,7 @@ usergroups:
       - microwavables
       - anjaltelang
       - shamus
+      - pnbrown
 
   - name: steering-members
     long_name: Kubernetes Steering Committee
