Update SIG Instrumentation charter/scope
Adds tracing and removes references to the deprecated project Heapster,
replacing it with klog.

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -1459,9 +1459,9 @@ sigs:
 - dir: sig-instrumentation
   name: Instrumentation
   mission_statement: >
-    Covers best practices for cluster observability through metrics, logging, and
-    events across all Kubernetes components and development of relevant components
-    such as Heapster and kube-state-metrics. Coordinates metric requirements of different
+    Covers best practices for cluster observability through metrics, logging, events,
+    and traces across all Kubernetes components and development of relevant components
+    such as klog and kube-state-metrics. Coordinates metric requirements of different
     SIGs for other components through finding common APIs.
 
   charter_link: charter.md
