Update Kevin's Company name

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -2866,7 +2866,7 @@ workinggroups:
       company: Google
     - github: kwiesmueller
       name: Kevin Wiesmueller
-      company: //SEIBERT/MEDIA GmbH
+      company: Google
   meetings:
   - description: Regular WG Meeting
     day: Tuesday
