archiving openshift-dev; merging to openshift-user
per request of openshift/okd working group creating just a single channel for openshift-users

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -317,6 +317,7 @@ channels:
   - name: openebs-dev
   - name: openkruise
   - name: openshift-dev
+    archived: true
   - name: openshift-users
   - name: openstack-helm
   - name: openstack-kolla
