--- a/sigs.yaml
+++ b/sigs.yaml
@@ -906,8 +906,8 @@ sigs:
     - description: Regular IBM Subproject Meeting
       day: Wednesday
       time: "14:00"
-      tz: EST
-      frequency: biweekly
+      tz: ET (Eastern Time)
+      frequency: monthly - last Wednesday every month
       url: https://zoom.us/j/9392903494
       archive_url: https://docs.google.com/document/d/1qd_LTu5GFaxUhSWTHigowHt3XwjJVf1L57kupj8lnwg/edit
   - name: provider-openstack
