slack-config: add apko channel
apko is a free and open source software tool for building container images
using apk, the package manager most typically used in Alpine Linux.

Signed-off-by: Ariadne Conill <ariadne@chainguard.dev>

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -12,6 +12,7 @@ channels:
   - name: api-priority-and-fairness
   - name: api-reviews
   - name: apisnoop
+  - name: apko
   - name: app-troubleshoot
   - name: archived-sig-release
     archived: true
