Fix tallclair affiliation
s/Apple/Google/

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -3344,7 +3344,7 @@ committees:
       company: Datadog
     - github: tallclair
       name: Tim Allclair
-      company: Apple
+      company: Google
     emeritus_leads:
     - github: swamymsft
       name: Swamy Shivaganga Nagaraju
