--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -277,6 +277,7 @@ channels:
   - name: meetup-nyc
   - name: meetup-dc
   - name: meetup-paris
+  - name: meetup-philadelphia
   - name: meetup-pittsburgh
   - name: meetup-sacramento
   - name: meetup-sanantonio
