Update affiliation for Alison Dowdney

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -1219,7 +1219,7 @@ sigs:
     chairs:
     - github: alisondy
       name: Alison Dowdney
-      company: Independent
+      company: Kasten
     - github: mrbobbytables
       name: Bob Killen
       company: Google
