--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -385,6 +385,7 @@ channels:
   - name: sig-node-bug-scrub
   - name: sig-node-rkt
     archived: true
+  - name: sig-node-sro
   - name: sig-node-swap
   - name: sig-scalability
   - name: sig-scheduling
@@ -403,7 +404,6 @@ channels:
   - name: spark-operator
   - name: spinnaker
   - name: sre
-  - name: sro
   - name: steering-committee
   - name: submariner
   - name: surveys
