Add rukpak-dev channel
Signed-off-by: Joe Lanford <joe.lanford@gmail.com>

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -345,6 +345,7 @@ channels:
   - name: reddit-mods
   - name: rktnetes
   - name: ro-users
+  - name: rukpak-dev
   - name: ru-users
   - name: scaleway-k8s
   - name: schemahero
