Update affiliation for eddiezane
Signed-off-by: Eddie Zaneski <eddiezane@gmail.com>

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -638,7 +638,7 @@ sigs:
       company: Shopify
     - github: eddiezane
       name: Eddie Zaneski
-      company: Amazon
+      company: Chainguard, Inc
     - github: seans3
       name: Sean Sullivan
       company: Google
