--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -471,3 +471,5 @@ channels:
   - name: windows-containerd
   - name: workshop-chat
   - name: yaml-overlay-tool
+  - name: zarf
+  - name: zarf-dev
