Add links for meeting notes and recording for wg-batch

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -2992,14 +2992,16 @@ workinggroups:
     tz: PT (Pacific Time)
     frequency: biweekly
     url: https://zoom.us/j/93540621078?pwd=cUNEWDYwMSt5c09DdXJyQ2R5dHlHUT09
-    recordings_url: TBD
+    archive_url: https://docs.google.com/document/d/1XOeUN-K0aKmJJNq7H07r74n-mGgSFyiEDQ3ecwsGhec/edit
+    recordings_url: https://www.youtube.com/playlist?list=PL69nYSiGNLP05eEikq0j8PcSehEdM4mj7&jct=s4irZjLuvQ2WrUYAGxyRYjs3a2aysg
   - description: Regular Meeting ([Calendar](https://calendar.google.com/calendar/embed?src=8ulop9k0jfpuo0t7kp8d9ubtj4%40group.calendar.google.com))
     day: Thursdays (starting March 3rd 2022)
     time: 7AM
     tz: PT (Pacific Time)
     frequency: biweekly
     url: https://zoom.us/j/98329676612?pwd=c0N2bVV1aTh2VzltckdXSitaZXBKQT09
-    recordings_url: TBD
+    archive_url: https://docs.google.com/document/d/1XOeUN-K0aKmJJNq7H07r74n-mGgSFyiEDQ3ecwsGhec/edit
+    recordings_url: https://www.youtube.com/playlist?list=PL69nYSiGNLP05eEikq0j8PcSehEdM4mj7&jct=s4irZjLuvQ2WrUYAGxyRYjs3a2aysg
   contact:
     slack: wg-batch
     mailing_list: https://groups.google.com/a/kubernetes.io/g/wg-batch
