Update jeremyrickard company affiliation
Signed-off-by: Jeremy Rickard <jeremyrrickard@gmail.com>

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -2086,7 +2086,7 @@ sigs:
       company: Chainguard, Inc
     - github: jeremyrickard
       name: Jeremy Rickard
-      company: Apple
+      company: Microsoft
     - github: puerco
       name: Adolfo García Veytia
       company: Chainguard, Inc
