update odo-devs slack group
add rm3l
remove mik-dass

--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -120,6 +120,7 @@ users:
   rashmigottipati: U013T1DD3PW
   reylejano: U01GDNJL5MW
   Rin Oliver: USF4LMDCN
+  rm3l: U034AQUV7PB
   rnapoles-rh: U01KDAMSWJD
   robshelly: U01LL4P09SR
   sammy: U8NJFL023
