add valaparthvi to odo-devs

--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -163,6 +163,7 @@ usergroups:
       - anandrkskd
       - rnapoles-rh
       - rm3l
+      - valaparthvi
 
   - name: pinniped-dev
     long_name: Pinniped Development Team
