--- a/communication/slack-config/users.yaml
+++ b/communication/slack-config/users.yaml
@@ -143,6 +143,7 @@ users:
   tpepper: U6UB5V4TX
   tstromberg: UCSL5SJ8Z
   Tunde: UAY977ENN
+  valaparthvi: U016TMJVDAA
   varshaprasad96: UK59YP2DA
   Verolop: U7NNE57PU
   vladimirmukhin: UHVSCSD4G
