Update affiliation for Swati Sehgal
Signed-off-by: Swati Sehgal <swsehgal@redhat.com>

--- a/sigs.yaml
+++ b/sigs.yaml
@@ -2982,7 +2982,7 @@ workinggroups:
       company: Red Hat
     - github: swatisehgal
       name: Swati Sehgal
-      company: Intel
+      company: Red Hat
   meetings:
   - description: Regular Meeting ([Calendar](https://calendar.google.com/calendar/embed?src=8ulop9k0jfpuo0t7kp8d9ubtj4%40group.calendar.google.com))
     day: Thursdays (starting March 3rd 2022)
