--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -102,6 +102,7 @@ channels:
   - name: external-secrets
   - name: falco
   - name: fiaas
+   -name: finops
   - name: fi-users
   - name: flink-operator
   - name: fr-events
