slack config: add Flatcar channel
Flatcar Container Linux is a fully open source, minimal-footprint,
secure by default and always up-to-date Linux distribution for running
containers at scale.

https://www.flatcar.org/

Flatcar has many users in the cloud native community, using
Flatcar as their OS of choice to run Kubernetes. Our maintainers
actively participate in multiple cloud native projects (e.g.
image-builder, CAPI, and several CAPI providers).

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -103,6 +103,7 @@ channels:
   - name: falco
   - name: fiaas
   - name: fi-users
+  - name: flatcar
   - name: flink-operator
   - name: fr-events
   - name: fr-users
