Add Streaming Runtime channel
Hi admins, 

I am working on a Streaming Runtime on top of Kubernetes. I would like to create a space (slack channel) where people can ask questions and involve themselves in this project. 

Git Repo: https://github.com/vmware-tanzu/streaming-runtimes
Docs: https://vmware-tanzu.github.io/streaming-runtimes/

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -409,6 +409,7 @@ channels:
   - name: spinnaker
   - name: sre
   - name: steering-committee
+  - name: streaming-runtime
   - name: submariner
   - name: surveys
   - name: summit-staff
