update the channel name to be less generic
less generic name for the streaming runtime

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -409,13 +409,13 @@ channels:
   - name: spinnaker
   - name: sre
   - name: steering-committee
-  - name: streaming-runtime
   - name: submariner
   - name: surveys
   - name: summit-staff
   - name: suse-caasp
   - name: talk-proposals
   - name: tanzu-community-edition
+  - name: tanzu-streaming-runtimes
   - name: terraform-providers
   - name: test-failures
   - name: tilt
