slack config: add Capsule channel
Signed-off-by: Massimiliano Giovagnoli <me@maxgio.it>

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -27,6 +27,7 @@ channels:
     archived: true
   - name: brigade
   - name: camptocamp-devops-stack
+  - name: capsule
   - name: cartographer
   - name: cdk
   - name: cert-manager
