slack config: add Kamaji channel
Signed-off-by: Massimiliano Giovagnoli <me@maxgio.it>

--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -169,6 +169,7 @@ channels:
   - name: k8s-release
     archived: true
   - name: k8spin
+  - name: kamaji
   - name: kapitan
   - name: kcp-prototype
   - name: keda
