--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -98,6 +98,7 @@ channels:
   - name: es-users
   - name: etcd
   - name: etcdadm
+  - name: evented-pleg
   - name: events
   - name: external-dns
   - name: external-secrets
