Update velero-maintainers group
This commit updates the members for "velero-maintainers" to reflect the
change in maintainers of project velero

Signed-off-by: Daniel Jiang <jiangd@vmware.com>

--- a/communication/slack-config/usergroups.yaml
+++ b/communication/slack-config/usergroups.yaml
@@ -62,13 +62,16 @@ usergroups:
     long_name: Velero Maintainers
     description: Velero Maintainers group.
     channels:
-      # - velero-dev
+      - velero-dev
       - velero-users
     members:
       - Dave Smith-Uchida
       - jiangd
       - yinw
-      - zubron
+      - ming-qiu
+      - shubham-pampattiwar
+      - xun-jiang
+      - scott-seago
 
   - name: youtube-admins
     long_name: YouTube Admins
