--- a/sigs.yaml
+++ b/sigs.yaml
@@ -1057,6 +1057,10 @@ sigs:
       url: https://zoom.us/j/566930821?pwd=N2JuRWljc3hGS3ZnVlBLTk42TFlzQT09
       archive_url: http://bit.ly/k8s-capz-agenda
       recordings_url: https://www.youtube.com/playlist?list=PL69nYSiGNLP29D0nYgAGWt1ZFqS9Z7lw4
+  - name: cluster-api-provider-cloudstack
+    description: Cluster API provider for Apache Cloudstack
+    owners:
+    - https://raw.githubusercontent.com/kubernetes-sigs/cluster-api-provider-cloudstack/master/OWNERS
   - name: cluster-api-provider-digitalocean
     description: Cluster API infrastructure provider for DigitalOcean
     contact:
