[ARCHIVED] Slack channel sig-docs-dockershim

--- a/communication/slack-config/sig-docs/docs-channels.yaml
+++ b/communication/slack-config/sig-docs/docs-channels.yaml
@@ -21,6 +21,7 @@ channels:
   - name: sig-docs
   - name: sig-docs-blog
   - name: sig-docs-dockershim
+    archived: true
   - name: sig-docs-localizations
   - name: sig-docs-maintainers
   - name: sig-docs-modeling
