--- a/communication/slack-config/channels.yaml
+++ b/communication/slack-config/channels.yaml
@@ -400,6 +400,7 @@ channels:
   - name: sig-scheduling
   # sig-security* channels are defined in sig-security/
   - name: sig-service-catalog
+    archived: true
   # sig-testing channels are defined in sig-testing/
   - name: sig-ui
   - name: sig-usability
